<resources>
    <string name="app_name">Moventra</string>
    <string name="login_title">Moventra</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Sign up to start renting</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>